Implementado auditoria e melhorias em dokcer, postgree e mysql